2007-08-20  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* vala/valacastexpression.vala, gobject/valacodegenerator.vala,
	vala/parser.y, vala/scanner.l: support C# like as operator
	* tests/Makefile.am, tests/test-034.*: test the as operator 

2007-08-20  Jürg Billeter  <j@bitron.ch>

	* vala/valafield.vala: support cheader_filename attribute,
	  fixes bug 464988

2007-08-20  Jürg Billeter  <j@bitron.ch>

	* ccode/valaccodedeclaration.vala, ccode/valaccodemodifiers.vala,
	  gobject/valacodegenerator.vala: fix initialization of external
	  variables

2007-08-20  Jürg Billeter  <j@bitron.ch>

	* vala/valafield.vala, gobject/valacodegenerator.vala,
	  gobject/valacodegeneratorclass.vala: support namespace fields and
	  public static class fields, fixes bug 464985

2007-08-20  Raffaele Sandrini  <raffaele@sandrini.ch>

	* vala/valasemanticanalyzer.vala: enclose prefix increment and decrement
	  unary expressions transformend to binary expressions into parenthesis

2007-08-20  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: report error and fix critical to
	  prevent private members in namespaces

2007-08-19  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* gobject/valacodegenerator.vala: also use _vala_array_free to
	release string arrays as g_strfreev cannot handle Vala's sized
	arrays, which have a _length variable, but no NULL sentinel.
	* gobject/valacodegeneratorsourcefile.vala: enhance _vala_array_free
	to handle unsized (NULL sentinel terminated) arrays.
	* tests/test-022.*: test behaviour of _vala_array_free. currently
	fails because Vala forgets to release old element members when 
	assigning a new value.

2007-08-19  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* gobject/valacodegeneratorsourcefile.vala: move code generation
	for _vala_array_free and _vala_array_move into separate methods
	for readability.

2007-08-18  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* gobject/valacodegenerator.vala: terminate array initializer